dotCMS/core#22128 Clean up Storyblock toHtml velocity
Fixes:

https://github.com/dotCMS/core/issues/22128
https://github.com/dotCMS/core/issues/22074
https://github.com/dotCMS/core/issues/22092