@@ -1,7 +1,6 @@
 package com.dotmarketing.util.json;
 
 import java.io.IOException;
-import java.io.Serializable;
 import java.io.Writer;
 import java.lang.reflect.Array;
 import java.util.ArrayList;
@@ -59,13 +58,14 @@ import java.util.Map;
  * @author JSON.org
  * @version 2009-04-14
  */
-public class JSONArray extends com.dotcms.repackage.org.codehaus.jettison.json.JSONArray implements Serializable {
+
+public class JSONArray implements Collection<Object> {
 
 
     /**
      * The arrayList where the JSONArray's properties are kept.
      */
-    private ArrayList myArrayList;
+    private final ArrayList<Object> myArrayList;
 
 
     public void add(int index, Object element) {
@@ -74,17 +74,17 @@ public class JSONArray extends com.dotcms.repackage.org.codehaus.jettison.json.J
 	}
 
 	public boolean add(Object o) {
-		// TODO Auto-generated method stub
+		
 		return myArrayList.add(o);
 	}
 
 	public boolean addAll(Collection<? extends Object> c) {
-		// TODO Auto-generated method stub
+		
 		return myArrayList.add(c);
 	}
 
 	public boolean addAll(int index, Collection<? extends Object> c) {
-		// TODO Auto-generated method stub
+		
 		return myArrayList.addAll( index, c);
 	}
 
@@ -94,82 +94,82 @@ public class JSONArray extends com.dotcms.repackage.org.codehaus.jettison.json.J
 	}
 
 	public boolean contains(Object o) {
-		// TODO Auto-generated method stub
+		
 		return myArrayList.contains(o);
 	}
 
 	public boolean containsAll(Collection<?> c) {
-		// TODO Auto-generated method stub
+		
 		return myArrayList.containsAll(c);
 	}
 
 	public int indexOf(Object o) {
-		// TODO Auto-generated method stub
+		
 		return myArrayList.indexOf(o);
 	}
 
 	public boolean isEmpty() {
-		// TODO Auto-generated method stub
+		
 		return myArrayList.isEmpty();
 	}
 
 	public Iterator<Object> iterator() {
-		// TODO Auto-generated method stub
+		
 		return myArrayList.iterator();
 	}
 
 	public int lastIndexOf(Object o) {
-		// TODO Auto-generated method stub
+		
 		return myArrayList.lastIndexOf(o);
 	}
 
 	public ListIterator<Object> listIterator() {
-		// TODO Auto-generated method stub
+		
 		return myArrayList.listIterator();
 	}
 
 	public ListIterator<Object> listIterator(int index) {
-		// TODO Auto-generated method stub
+		
 		return myArrayList.listIterator(index);
 	}
 
 	public boolean remove(Object o) {
-		// TODO Auto-generated method stub
+		
 		return myArrayList.remove(o);
 	}
 
 	public boolean removeAll(Collection<?> c) {
-		// TODO Auto-generated method stub
+		
 		return myArrayList.removeAll(c);
 	}
 
 	public boolean retainAll(Collection<?> c) {
-		// TODO Auto-generated method stub
+		
 		return myArrayList.retainAll(c);
 	}
 
 	public Object set(int index, Object element) {
-		// TODO Auto-generated method stub
+		
 		return myArrayList.set(index,element);
 	}
 
 	public int size() {
-		// TODO Auto-generated method stub
+		
 		return myArrayList.size();
 	}
 
 	public List<Object> subList(int fromIndex, int toIndex) {
-		// TODO Auto-generated method stub
+		
 		return myArrayList.subList(fromIndex,toIndex);
 	}
 
 	public Object[] toArray() {
-		// TODO Auto-generated method stub
+		
 		return myArrayList.toArray();
 	}
 
 	public <T> T[] toArray(T[] a) {
-		// TODO Auto-generated method stub
+		
 		return (T[]) myArrayList.toArray(a);
 	}
 
@@ -177,7 +177,7 @@ public class JSONArray extends com.dotcms.repackage.org.codehaus.jettison.json.J
      * Construct an empty JSONArray.
      */
     public JSONArray() {
-        this.myArrayList = new ArrayList();
+        this.myArrayList=new ArrayList<>();
     }
 
     /**
@@ -220,7 +220,7 @@ public class JSONArray extends com.dotcms.repackage.org.codehaus.jettison.json.J
             case ']':
             case ')':
                 if (q != c) {
-                    throw x.syntaxError("Expected a '" + new Character(q) + "'");
+                    throw x.syntaxError("Expected a '" + Character.valueOf(q) + "'");
                 }
                 return;
             default:
@@ -246,10 +246,10 @@ public class JSONArray extends com.dotcms.repackage.org.codehaus.jettison.json.J
      * Construct a JSONArray from a Collection.
      * @param collection     A Collection.
      */
-    public JSONArray(Collection collection) {
-		this.myArrayList = new ArrayList();
+    public JSONArray(Collection<Object> collection) {
+		this();
 		if (collection != null) {
-			Iterator iter = collection.iterator();
+			Iterator<Object> iter = collection.iterator();
 			while (iter.hasNext()) {
 			    Object o = iter.next();
                 this.myArrayList.add(JSONObject.wrap(o));  
@@ -658,7 +658,7 @@ public class JSONArray extends com.dotcms.repackage.org.codehaus.jettison.json.J
      * @param value A Collection value.
      * @return      this.
      */
-    public JSONArray put(Collection value) {
+    public JSONArray put(Collection<Object> value) {
         put(new JSONArray(value));
         return this;
     }
@@ -672,7 +672,7 @@ public class JSONArray extends com.dotcms.repackage.org.codehaus.jettison.json.J
      * @return this.
      */
     public JSONArray put(double value) throws JSONException {
-        Double d = new Double(value);
+        Double d = Double.valueOf(value);
         JSONObject.testValidity(d);
         put(d);
         return this;
@@ -686,7 +686,7 @@ public class JSONArray extends com.dotcms.repackage.org.codehaus.jettison.json.J
      * @return this.
      */
     public JSONArray put(int value) {
-        put(new Integer(value));
+        put( Integer.valueOf(value));
         return this;
     }
 
@@ -698,7 +698,7 @@ public class JSONArray extends com.dotcms.repackage.org.codehaus.jettison.json.J
      * @return this.
      */
     public JSONArray put(long value) {
-        put(new Long(value));
+        put( Long.valueOf(value));
         return this;
     }
 
@@ -769,7 +769,7 @@ public class JSONArray extends com.dotcms.repackage.org.codehaus.jettison.json.J
      * not finite.
      */
     public JSONArray put(int index, double value) throws JSONException {
-        put(index, new Double(value));
+        put(index, Double.valueOf(value));
         return this;
     }
 
@@ -784,7 +784,7 @@ public class JSONArray extends com.dotcms.repackage.org.codehaus.jettison.json.J
      * @throws JSONException If the index is negative.
      */
     public JSONArray put(int index, int value) throws JSONException {
-        put(index, new Integer(value));
+        put(index,  Integer.valueOf(value));
         return this;
     }
 
@@ -799,7 +799,7 @@ public class JSONArray extends com.dotcms.repackage.org.codehaus.jettison.json.J
      * @throws JSONException If the index is negative.
      */
     public JSONArray put(int index, long value) throws JSONException {
-        put(index, new Long(value));
+        put(index,  Long.valueOf(value));
         return this;
     }
 
